# zkbench-rust

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: actionlint.yaml
.github/workflows/: ci.yml  extract-knowledge.yml  pr-review-notify.yml
src/: benchmark.rs  hash.rs  lib.rs  platform.rs  schema.rs  statistics.rs  stopwatch.rs
